--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 			</div>
 			<div class="countdown__random-text">Some fun random text</div>
 		</div>
-		<script src="script.js"></script>
+		<script src="js/script.js"></script>
 	</body>
 </html>
