add modal when time is up

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 				</div>
 			</div>
 			<div class="countdown__random-text">Some fun random text</div>
+			<div class="countdown__modal hidden">Hier steht der zoom Link</div>
 		</div>
 		<script src="js/script.js"></script>
 	</body>
