add jQuery, add animations

--- a/index.html
+++ b/index.html
@@ -35,9 +35,18 @@
 					</div>
 				</div>
 			</div>
-			<div class="countdown__random-text">Some fun random text</div>
-			<div class="countdown__modal hidden">Hier steht der zoom Link</div>
+			<div class="countdown__random-text-wrapper">
+				<div class="countdown__random-text">Ein Paket</div>
+			</div>
+			<div class="countdown__modal hidden">
+				<a
+					class="countdown__modal-text"
+					href="https://join.skype.com/JeV9sbZXADJd"
+					>Click me</a
+				>
+			</div>
 		</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="js/script.js"></script>
 	</body>
 </html>
