add text to text array

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				</div>
 			</div>
 			<div class="countdown__random-text-wrapper">
-				<div class="countdown__random-text">Ein Paket</div>
+				<div class="countdown__random-text">Der Fall</div>
 			</div>
 			<div class="countdown__modal hidden">
 				<a
